##############################################################################

## This file is a shell script fragment that supplies the information
## necessary to tailor a template configure script into the configure
## script appropriate for this directory.  For more information, check
## any existing configure script.  

## Be warned, there are two types of configure.in files.  There are those
## used by Autoconf, which are macros which are expanded into a configure
## script by autoconf.  The other sort, of which this is one, is executed
## by Cygnus configure.  

## For more information on these two systems, check out the documentation
## for 'Autoconf' (autoconf.texi) and 'Configure' (configure.texi).  

##############################################################################

### To add a new directory to the tree, first choose whether it is a target
### or a host dependent tool.  Then put it into the appropriate list
### (library or tools, host or target), doing a dependency sort.  For
### example, gdb requires that byacc (or bison) be built first, so it is in
### the ${host_tools} list after byacc and bison.  


# these libraries are used by various programs built for the host environment
#
host_libs="mmalloc libiberty opcodes bfd readline glob gash tcl tk tclX"

# these tools are built for the host environment
#
host_tools="texinfo byacc flex bison binutils ld gas gcc gdb make patch
	    prms send-pr gprof gdbtest tgas etc expect dejagnu sim
            m4 autoconf ispell grep diff rcs cvs fileutils shellutils
	    textutils wdiff find emacs uudecode hello tar gzip indent
	    recode release sed utils"


# these libraries are built for the target environment, and are built after
# the host libraries and the host tools (which may be a cross compiler)
#
target_libs="libm xiberty newlib libio libg++"


# these tools are built using the target libs, and are intended to run only
# in the target environment.  we currently have none.
#
# note: any program that *uses* libraries that are in the "target_libs"
# list belongs in this list.  those programs are also very likely
# candidates for the "native_only" list which follows
#
target_tools="groff"

################################################################################

## These two lists are of directories that are to be removed from the
## ${configdirs} list for either cross-compilations or for native-
## compilations.  For example, it doesn't make that much sense to
## cross-compile Emacs, nor is it terribly useful to compile xiberty in
## a native environment.  

# directories to be built in the native environment only
#
native_only="autoconf cvs emacs fileutils find grep groff gzip hello indent
             ispell m4 rcs recode sed shellutils tar textutils gash tk uudecode wdiff 
	     gprof"

# directories to be built in a cross environment only
#
cross_only="xiberty newlib"

## All tools belong in one of the four categories, and are assigned above
## We assign ${configdirs} this way to remove all embedded newlines.  This
## is important because configure will choke if they ever get through.
#
configdirs=`echo ${host_libs} ${host_tools} ${target_libs} ${target_tools}`

################################################################################

srctrigger=move-if-change
srcname="gnu development package"

# per-host:

case "${host}" in
  m68k-hp-hpux*)	  host_makefile_frag=config/mh-hp300 ;;
  m68k-apollo-sysv*)      host_makefile_frag=config/mh-apollo68 ;;
  m68k-apollo-bsd*)       host_makefile_frag=config/mh-a68bsd ;;
  m88k-motorola-sysv*)    host_makefile_frag=config/mh-delta88;;
  m88k-dg-dgux*)	  host_makefile_frag=config/mh-dgux ;;
  mips*-dec-ultrix*)      host_makefile_frag=config/mh-decstation ;;
  mips*-sgi-irix5*)       host_makefile_frag=config/mh-irix5 ;;
  mips*-sgi-irix4*)       host_makefile_frag=config/mh-irix4 ;;
  mips*-sgi-irix3*)       host_makefile_frag=config/mh-sysv ;;
  mips*-*-sysv4*)	  host_makefile_frag=config/mh-sysv4 ;;
  mips*-*-sysv*)	  host_makefile_frag=config/mh-riscos ;;
  i[34]86-ncr-sysv4*)     host_makefile_frag=config/mh-ncr3000 ;;
  i[34]86-*-sco*)         host_makefile_frag=config/mh-sco ;;
  i[34]86-*-isc*)	  host_makefile_frag=config/mh-sysv ;;
  i[34]86-*-linux*)       host_makefile_frag=config/mh-linux ;;
  i[34]86-*-solaris2*)    host_makefile_frag=config/mh-sysv4 ;;
  i[34]86-*-aix*)	  host_makefile_frag=config/mh-aix386 ;;
  vax-*-ultrix2*)         host_makefile_frag=config/mh-vaxult2 ;;
  *-ibm-aix*)             host_makefile_frag=config/mh-aix ;;
  *-bull-bosx*)           host_makefile_frag=config/mh-aix ;;
  *-*-solaris2*)          host_makefile_frag=config/mh-solaris ;;
  m68k-sun-*)		  host_makefile_frag=config/mh-sun3 ;;
  *-sun-*)		  host_makefile_frag=config/mh-sun ;;
  *-hp-hpux*)             host_makefile_frag=config/mh-hpux ;;
  *-*-hiux*)              host_makefile_frag=config/mh-hpux ;;
  rs6000-*-lynxos*)	  host_makefile_frag=config/mh-lynxosrs6k ;;
  *-*-lynxos*)	  	  host_makefile_frag=config/mh-lynxos ;;
  *-*-sysv4*)             host_makefile_frag=config/mh-sysv4 ;;
  *-*-sysv*)              host_makefile_frag=config/mh-sysv ;;
esac

# per-target:

gasdir=gas
use_gnu_ld=
use_gnu_as=

# some tools are so dependent upon X11 that if we're not building with X, 
# it's not even worth trying to configure, much less build, that tool.

case ${with_x} in
  yes | "")  # the default value for this tree is that X11 is available
	;;
  no)
    	configdirs=`echo " ${configdirs} " | sed -e 's/ tk / /;/ gash / /'`
	;;
  *)
    	echo "*** bad value \"${with_x}\" for -with-x flag; ignored" 1>&2
    	;;
esac



# Some tools are only suitable for building in a "native" situation.
# Those are added when we have a host==target configuration.  For cross
# toolchains, we add some directories that should only be useful in a
# cross-compiler.

if [ x"${host}" = x"${target}" ] ; then
	# when doing a native toolchain, don't build the targets
	# that are in the 'cross only' list
	for i in ${cross_only} ; do
	  configdirs=`echo " ${configdirs} " | sed -e "s/ $i / /"`
	done
else
	# similarly, don't build the targets in the 'native only' 
	# list when building a cross compiler
	for i in ${native_only} ; do
	  configdirs=`echo " ${configdirs} " | sed -e "s/ $i / /"`
	done
fi	

# Remove more programs from consideration, based on the host or 
# target this usually means that a port of the program doesn't
# exist yet.

noconfigdirs=""

case "${host}" in
  i[34]86-*-netbsd*)
    noconfigdirs="tk fileutils"
    ;;
  i[34]86-*-vsta)
    noconfigdirs="tcl expect dejagnu make texinfo bison patch flex byacc send-pr gprof uudecode dejagnu diff"
    ;;
  i[34]86-*-go32)
    noconfigdirs="tcl expect deja-gnu make texinfo bison patch flex byacc send-pr gprof uudecode dejagnu diff"
    ;;
esac

case "${target}" in
  alpha-dec-osf1*)
    noconfigdirs="$noconfigdirs emacs fileutils grep newlib"
    ;;	
  alpha*-*-*)
    noconfigdirs="$noconfigdirs newlib"
    ;;    
  h8300*-*-* | \
  h8500-*-*)
    noconfigdirs="$noconfigdirs libg++ libio"
    ;;
  hppa*-*-*elf*)
    # Do configure ld/binutils/gas for this case.
    ;;
  hppa*-*-*)
    # HP's C compiler doesn't handle Emacs correctly (but on BSD and Mach
    # cc is gcc, and on any system a user should be able to link cc to
    # whatever they want.  FIXME, emacs).
    case "${CC}" in
	"" | cc*) noconfigdirs="$noconfigdirs emacs" ;;
        *) ;;
    esac
    noconfigdirs="$noconfigdirs ld shellutils"
    ;;
  i[34]86-*-go32)
    # add the go32 support tools to the list
    configdirs=`echo go32 ${configdirs}`
    ;;
  i[34]86-*-solaris2*)
    # The linker does static linking correctly, but the Solaris C library
    # has bugs such that some important functions won't work when statically
    # linked.  (See man pages for getpwuid, for example.)
    noconfigdirs="$noconfigdirs ld"
    ;;
  i[34]86-*-sysv4*)
    # The SYSV4 C compiler doesn't handle Emacs correctly
    case "${CC}" in
	"" | cc*) noconfigdirs="$noconfigdirs emacs" ;;
        *) ;;
    esac
    # but that's okay since emacs doesn't work anyway
    noconfigdirs="$noconfigdirs emacs"

    # static versions of several key libraries are not available, 
    # so building our entire toolchain is impossible until 
    # the GNU linker supports shared libraries
    noconfigdirs="$noconfigdirs ld"
    ;;
  powerpc-*-aix*)
    # copied from rs6000-*-* entry
    noconfigdirs="$noconfigdirs ld binutils gprof textutils cvs"
    ;;
  rs6000-*-*)
    # a gcc built textutils will cause the linker to hang on 'join'
    # The CVS server code doesn't work on the RS/6000
    noconfigdirs="$noconfigdirs ld binutils gprof textutils cvs"
    ;;
  m68k-apollo-*)
    noconfigdirs="$noconfigdirs ld binutils gprof"
    ;;
  mips*-*-irix5*)
    # The GNU linker does not support shared libraries.
    noconfigdirs="$noconfigdirs ld gprof"
    ;;
  mips*-*-*)
    noconfigdirs="$noconfigdirs gprof"
    ;;
  sh-*-*)
    case "${host}" in
      i[34]86-*-vsta) ;; # don't add gprof back in
      *) configdirs=`echo gprof ${configdirs}` ;;
      i[34]86-*-go32) ;; # don't add gprof back in
      *) configdirs=`echo gprof ${configdirs}` ;;
    esac
    ;;
  sparc-*-sunos4*)
    use_gnu_ld=no
    ;;
  sparc-*-solaris2*)
    # See i386-*-solaris2* above.
    noconfigdirs="$noconfigdirs ld"
    ;;
  i[34]86-*-sco*)
    noconfigdirs="$noconfigdirs gprof"
    ;;
  *-*-sysv4)
    use_gnu_ld=no
    ;;
   *-*-lynxos*)
     # Newlib makes problems for libg++ in crosses.
     noconfigdirs="$noconfigdirs newlib"
     ;;    
  *-*-vms)
    noconfigdirs="$noconfigdirs bfd ld binutils gdb"
    ;;
esac

notsupp=""
for dir in . $noconfigdirs ; do
  if [ $dir != . ] && echo "# ${configdirs} #" | grep "${dir} " >/dev/null 2>&1 ; then
    configdirs=`echo " ${configdirs} " | sed -e "s/ ${dir} / /"`
    if [ -r $srcdir/$dir/configure ] || [ -r $srcdir/$dir/configure.in ]; then
      notsupp="$notsupp $dir"
    fi
  fi
done

# Produce a warning message for the subdirs we can't configure.
# This isn't especially interesting in the Cygnus tree, but in the individual
# FSF releases, it's important to let people know when their machine isn't
# supported by the one or two programs in a package.

if [ -n "${notsupp}" ] && [ -z "${norecursion}" ]; then
  echo "*** This configuration is not supported in the following subdirectories:" 1>&2
  echo "    ${notsupp}" 1>&2
  echo "    (Any other directories should still work fine.)" 1>&2
fi

# Set with_gnu_as and with_gnu_ld as appropriate.
#
# This is done by determining whether or not the appropriate directory
# is available, and by checking whether or not specific configurations
# have requested that this magic not happen.
# 
# The command line options always override the explicit settings in 
# configure.in, and the settings in configure.in override this magic.
#
# If the default for a toolchain is to use GNU as and ld, and you don't 
# want to do that, then you should use the --without-gnu-as and
# --without-gnu-ld options for the configure script.

if [ x${use_gnu_as} = x ] ; then
  if [ x${with_gnu_as} != xno ] && echo " ${configdirs} " | grep " ${gasdir} " > /dev/null 2>&1 && [ -d ${srcdir}/${gasdir} ] ; then
    with_gnu_as=yes
    withoptions="$withoptions --with-gnu-as"
  fi
fi

if [ x${use_gnu_ld} = x ] ; then
  if [ x${with_gnu_ld} != xno ] && echo " ${configdirs} " | grep " ld " > /dev/null 2>&1 && [ -d ${srcdir}/ld ] ; then
    with_gnu_ld=yes
    withoptions="$withoptions --with-gnu-ld"
  fi
fi

#
# Local Variables:
# fill-column: 131
# End:
#
